--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-player": "^2.13.0",
+    "react-router": "^6.18.0",
     "styled-components": "^6.0.8"
   },
   "devDependencies": {
