--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-transformer-sharp": "^5.12.0",
     "primereact": "^10.0.3",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-player": "^2.13.0",
