--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "babel-plugin-styled-components": "^2.1.4",
+    "d3-ease": "^3.0.1",
     "gatsby": "^5.12.4",
     "gatsby-omni-font-loader": "^2.0.2",
     "gatsby-plugin-image": "^3.12.0",
@@ -16,11 +17,13 @@
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^5.12.0",
     "gatsby-transformer-sharp": "^5.12.0",
+    "lodash": "^4.17.21",
     "primereact": "^10.0.3",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-move": "^6.5.0",
     "react-player": "^2.13.0",
     "react-router": "^6.18.0",
     "styled-components": "^6.0.8"
