--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@gatsbyjs/reach-router": "^2.0.1",
     "aos": "^2.3.4",
     "babel-plugin-styled-components": "^2.1.4",
     "d3-ease": "^3.0.1",
     "gatsby": "^5.12.4",
+    "gatsby-link": "^5.12.1",
     "gatsby-omni-font-loader": "^2.0.2",
     "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-image": "^3.12.0",
@@ -16,18 +18,19 @@
     "gatsby-plugin-sharp": "^5.12.0",
     "gatsby-plugin-styled-components": "^6.12.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
+    "gatsby-react-router-scroll": "^6.12.0",
+    "gatsby-script": "^2.12.0",
     "gatsby-source-filesystem": "^5.12.0",
     "gatsby-transformer-sharp": "^5.12.0",
     "lodash": "^4.17.21",
     "primereact": "^10.0.3",
-    "react": "^16.14.0",
+    "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-move": "^6.5.0",
     "react-player": "^2.13.0",
     "react-responsive": "^9.0.2",
-    "react-reveal": "^1.2.2",
     "react-router": "^6.18.0",
     "react-sticky-box": "^2.0.5",
     "styled-components": "^6.0.8"
