--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-plugin-styled-components": "^2.1.4",
     "d3-ease": "^3.0.1",
     "gatsby": "^5.12.4",
+    "gatsby-adapter-netlify": "^1.1.1",
     "gatsby-link": "^5.12.1",
     "gatsby-omni-font-loader": "^2.0.2",
     "gatsby-plugin-anchor-links": "^1.2.1",
